--- a/build.gradle
+++ b/build.gradle
@@ -55,9 +55,9 @@ bootJar {
 
 sonarqube {
   properties {
-    property "sonar.projectKey", "TODO"
-    property "sonar.organization", "TODO"
-    property "sonar.host.url", "TODO"
+    property "sonar.projectKey", "sopra-fs23-group-03_sopra-fs23-group-03-server"
+    property "sonar.organization", "sopra-fs23-group-03"
+    property "sonar.host.url", "https://sonarcloud.io"
   }
 }
 
