--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 *.class
 
+
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -28,6 +30,9 @@ blog/bin/
 **/*.iml
 **/.idea
 **/.gradle
+
+#Contributions file
+contributions.md
 
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
