--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+    - '**/contributions.md'
 
   # run the workflow manually from the Actions tab
   workflow_dispatch:
