--- a/build.gradle
+++ b/build.gradle
@@ -42,14 +42,15 @@ dependencyManagement {
 }
 
 dependencies {
-    implementation 'org.mapstruct:mapstruct:1.3.1.Final' //or 1.4.2.Final'? //by sopra default it was: 1.3.1.Final'
+    implementation 'org.mapstruct:mapstruct:1.3.1.Final'
+    testImplementation 'junit:junit:4.13.1'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
     testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5' // has the ObjectMapper for JSON mapping // before it was 2.12.5
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5' // has the ObjectMapper for JSON mapping
 
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
