--- a/app.yaml
+++ b/app.yaml
@@ -2,4 +2,7 @@
 # https://cloud.google.com/appengine/docs/standard
 
 runtime: java17
-instance_class: F2
+instance_class: B2
+
+basic_scaling:
+  max_instances: 1
